# yotta_financial_sentiment_news_scraping

./: README.md  pyproject.toml
docs/: WebScraper.rst  conf.py  index.rst  news.rst
newscraping/application/: scraping.py
newscraping/infrastructure/: infra.py
newscraping/settings/: base.py
tests/: test_scraping.py
