[tool.poetry]
name = "newscraping"
version = "0.1.0"
description = "Web scraping of financial headlines"
authors = ["Jerome Blin <blinjrm@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
click = "^7.1.2"
pytest = "^6.2.1"
coverage = "^5.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
line_length = 100
include_trailing_comma = true

[tool.black]
line_length = 100

[tool.poetry.scripts]
latest = 'newscraping.application.scraping:latest'
after_date = 'newscraping.application.scraping:after_date'
